fixed the topnavbar overlap

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,7 @@
 body, html {
     width: 100%;
     height: 100%;
+    padding-top: 65px;
 }
 
 body, h1, h2, h3 {
